--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,8 @@
       {
         "button-name": "off"
       }
-    ]
+    ],
+    "detect-css-reflows/composite": "off",
+    "detect-css-reflows/paint": "off"
   }
 }
